--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ psycopg2==2.7.5
 python-decouple==3.1
 pytz==2018.5
 requests==2.19.1
+spotipy==2.4.4
 static3==0.7.0
 urllib3==1.23
 whitenoise==3.3.1
