--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 certifi==2018.4.16
 chardet==3.0.4
+defusedxml==0.5.0
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.1
+django-allauth==0.36.0
+django-gravatar2==1.4.2
 gunicorn==19.9.0
 idna==2.7
+oauthlib==2.1.0
 psycopg2==2.7.5
 python-decouple==3.1
+python3-openid==3.1.0
 pytz==2018.5
 requests==2.19.1
+requests-oauthlib==1.0.0
 spotipy==2.4.4
 static3==0.7.0
 urllib3==1.23
