--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dj-static==0.0.6
 Django==2.1
 django-allauth==0.36.0
 django-gravatar2==1.4.2
+google-api-python-client==1.7.4
 gunicorn==19.9.0
 idna==2.7
 oauthlib==2.1.0
